--- a/backend/package.json
+++ b/backend/package.json
@@ -4,20 +4,17 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "ts-node src/server.ts",
-    "dev": "nodemon src/server.ts"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
-    "express": "^4.21.1",
-    "mongodb": "^6.11.0",
-    "mongoose": "^8.8.3"
+    "mongoose": "^7.0.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
